--- a/_posts/2023-01-20-58.md
+++ b/_posts/2023-01-20-58.md
@@ -4,9 +4,10 @@ title: '#58 Patoarchitekci Short #16'
 date: 2023-01-20 08:00:00 +0200
 description: 
 img: "58"
-tags: []
+tags: ["chatgpt","openai","ai","backstage","azure","microsoft","ms"]
 spreaker: 52483308
 ---
+Tym razem sprawdzamy, co ciekawego słychać w świecie GPT-3 i zabezpieczeń z nim związanych. Dodatkowo trochę o wykorzystaniu mono-repo, GitHubie i Backstage!
 
 
 Linki i ciekawe znaleziska:
