--- a/_posts/2023-01-27-59.md
+++ b/_posts/2023-01-27-59.md
@@ -4,9 +4,11 @@ title: '#59 Patoarchitekci Short #17'
 date: 2023-01-27 08:00:00 +0200
 description: 
 img: "59"
-tags: []
+tags: ["vr","amazon","kubernetes","google","docker"]
 spreaker: 52551048
 ---
+Czy warto wszędzie stosować Kubernetesa i Dockera? Jakie mogą być przyczyny recesji na rynku VR? Masowe zwolnienia w sektorze big tech, The Ultimate Guide to the Software Architecture 
+\- oraz... co wg. Elona może oznaczać "some extra crunching" w kontekście naprawiania błędów Twittera :D
 
 
 Linki i ciekawe znaleziska:
