--- a/_posts/2023-01-27-59.md
+++ b/_posts/2023-01-27-59.md
@@ -15,7 +15,9 @@ Linki i ciekawe znaleziska:
 
 - [The Ultimate Guide To Software Architecture Documentation](https://www.workingsoftware.dev/software-architecture-documentation-the-ultimate-guide/ )
 - [They're rebuilding the Death Star of complexity](https://world.hey.com/dhh/they-re-rebuilding-the-death-star-of-complexity-4fb5d08d)
-- [More details come out on which departments saw layoffs at Google, Microsoft, and Amazon](https://www.theverge.com/2023/1/21/23564873/google-microsoft-amazon-layoffs-prime-air-google-brain)
+- [Patoarchitekci dla WOŚP - wylicytuj odcinek,  nasze wystąpienie lub konsultacje!](https://allegro.pl/oferta/patoarchitekci-dla-wosp-13165687381)
+- [Badanie społeczności SysOps/DevOps Polska - ankieta z Webankieta.pl](https://sysopspolska.webankieta.pl/)
+- [Big Tech layoffs hit Amazon’s drones, Halo developers, and Google’s incubator - The Verge](https://www.theverge.com/2023/1/21/23564873/google-microsoft-amazon-layoffs-prime-air-google-brain)
 
 ### Transkrypcja
 
