--- a/_posts/2023-01-27-59.md
+++ b/_posts/2023-01-27-59.md
@@ -7,8 +7,8 @@ img: "59"
 tags: ["vr","amazon","kubernetes","google","docker"]
 spreaker: 52551048
 ---
-Czy warto wszędzie stosować Kubernetesa i Dockera? Jakie mogą być przyczyny recesji na rynku VR? Masowe zwolnienia w sektorze big tech, The Ultimate Guide to the Software Architecture 
-\- oraz... co wg. Elona może oznaczać "some extra crunching" w kontekście naprawiania błędów Twittera :D
+Czy warto wszędzie stosować Kubernetesa i Dockera? Masowe zwolnienia w sektorze big tech, The Ultimate Guide to the Software Architecture 
+\- oraz... co wg. Elona może oznaczać "some extra crunching" w kontekście naprawiania błędów Twittera 😅
 
 
 Linki i ciekawe znaleziska:
