--- a/_posts/2023-02-17-62.md
+++ b/_posts/2023-02-17-62.md
@@ -7,6 +7,7 @@ img: "62"
 tags: []
 spreaker: 52754192
 ---
+Multi-tenancy vs single-tenancy! Czyli m. in. o: KeyCloak'u, Ingressie, implementacja pod B2C a B2B... Czy serwisy platformowe powinny być współdzielone? Odsłuchaj odcinka i sprawdź sam! 
 
 
 Linki i ciekawe znaleziska:
