--- a/_posts/2023-02-24-63.md
+++ b/_posts/2023-02-24-63.md
@@ -3,7 +3,7 @@ layout: post
 title: '#63 Patoarchitekci Short #19'
 date: 2023-02-24 08:00:00 +0200
 description: 
-img: "63"
+episode: "63"
 tags: []
 spreaker: 52824469
 ---
